# sim-shape

./: BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml  release-plz.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/agents/: card-index.json  cards.jsonl
docs/diagrams/src/: README.md
docs/humans/: README.md
recipes/: book.toml
recipes/01-basics/: chapter.toml
recipes/01-basics/exact-bool-shape/: Cargo.toml  README.md  expected.txt  recipe.toml
recipes/01-basics/exact-bool-shape/src/: main.rs
recipes/01-basics/shape-grammar-contract/: Cargo.toml  README.md  expected.txt  recipe.toml
recipes/01-basics/shape-grammar-contract/src/: main.rs
src/: algebra.rs  base.rs  citizen.rs  citizen_tests.rs  compare.rs  diagnostics.rs  duplicate_key_tests.rs  duplicate_keys.rs  functions.rs  grammar.rs  hooks.rs  lib.rs  options.rs  parse.rs  parse_tests.rs  primitives.rs  query.rs  recursion.rs  recursive.rs  tests.rs
src/algebra/: boolean.rs  collection.rs  tests.rs
src/citizen/: class.rs  codec.rs  construct.rs  inventory.rs  recursive_codec.rs
src/compare/: normal.rs  relation.rs  tests.rs  venn.rs
src/functions/: demand.rs  select.rs  shape_object.rs  tests.rs
src/grammar/: graph.rs
src/hooks/: hooked.rs  tests.rs  types.rs
src/primitives/: atomic.rs  combinators.rs  object.rs  tests.rs
src/primitives/combinators/: capture.rs  effectful.rs  list.rs  one_of.rs  parser.rs
src/tests/: core.rs  dispatch.rs  list.rs  object.rs
xtask/src/: file_sizes.rs  main.rs
