[package]
name = "sim-shape"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Shape algebra, comparison, and match-hook helpers."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-shape"
homepage = "https://github.com/sim-nest/sim-shape"

[workspace]
resolver = "3"
members = [
  "xtask",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-shape"
homepage = "https://github.com/sim-nest/sim-shape"

[workspace.lints.rust]
unsafe_code = "forbid"

[dependencies]
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
